refactor(broker): cleanup unused code